force-app/main/default/objects/Ship_To_Reassignments__c/Ship_To_Reassignments__c.object-meta.xml
<CustomObject>
    <description>Summary of all Ship Tos associated with the Bill To for a single rep.  Includes all the RepIDs per ShipTo.</description>
    <label>Ship To Reassignments</label>
    <nameField>
        <label>Ship To Reassignments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To Reassignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>