force-app/main/default/objects/Ship_To_Reassignments__c/fields/Account_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Account_Reassignment__c</fullName>
    <label>Account Reassignment</label>
    <referenceTo>Account_Reassignment__c</referenceTo>
    <relationshipLabel>Ship To Reassignments</relationshipLabel>
    <relationshipName>Ship_To_Reassignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>