force-app/main/default/objects/Ship_To_Reassignments__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Ship To Reassignments</relationshipLabel>
    <relationshipName>Ship_To_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>