force-app/main/default/objects/Ship_To_Reassignments__c/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <formula>Ship_To__r.Ship_To_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Code</label>
    <type>Text</type>
</CustomField>