force-app/main/default/objects/Ship_To_Reassignments__c/fields/Ship_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ship_To_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>