force-app/main/default/objects/Ship_To_Reassignments__c/fields/ShipTo_RepID__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_RepID__c</fullName>
    <label>ShipTo RepID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>